--- a/eclipse/eclipse/templates/index.html
+++ b/eclipse/eclipse/templates/index.html
@@ -2,16 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To-do list</title>
 </head>
 <body>
-    <h1>Lista de Tarefas</h1>
-    <ol>
-        {%for tarefa in  tarefas%}
-            <li>{{tarefa. descricao}}--{%if tarefa.concluido%} Concluido {%else%} Pendente {%endif%}</li>
-        {%endfor%}
-    </ol>
+    <h1>Lista de Tarefas da gabys</h1>
+    <form action="/add" method="post">
+        <input type="text" name="descricao" placeholder="Nova Tarefa">
+            <button type="submit">Add</button>
+    </form>
+    <ul>
+        {% for tarefa in tarefas %}
+            <li>{{tarefa.descricao}}-{% if tarefa.completo %}Completa{% else %}Pendente{% endif %}</li>
+        {% endfor %}
+    </ul>
 </body>
 </html>
